# uv-todo

./: .gitignore  README.md  hello.py  pyproject.toml
core/: admin.py  apps.py  models.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_todo.py
core/templates/: _base.html  tasks.html
core/tests/: conftest.py  test_todo_model.py
todo_django/: settings.py  urls.py
